<?xml version="1.0" encoding="UTF-8"?>
<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  ~
  ~    Copyright (c) 2022 - 2024.
  ~    Haixing Hu, Qubit Co. Ltd.
  ~
  ~    All rights reserved.
  ~
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

  <modelVersion>4.0.0</modelVersion>
  <groupId>ltd.qubit</groupId>
  <artifactId>pom-meta</artifactId>
  <packaging>pom</packaging>
  <version>1.0.0-SNAPSHOT</version>
  <name>The Parent of BOM and Root-POM</name>
  <url>${project.home.url}/pom-root</url>

  <organization>
    <name>Qubit Co. Ltd.</name>
    <url>https://qubit.ltd/</url>
  </organization>

  <licenses>
    <license>
      <name>Apache License, Version 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
      <distribution>manual</distribution>
      <comments>A business-friendly OSS license</comments>
    </license>
  </licenses>

  <issueManagement>
    <system>Github</system>
    <url>${project.home.url}/${project.artifactId}/issues</url>
  </issueManagement>

  <distributionManagement>
    <repository>
      <id>qubit-releases</id>
      <url>https://maven.qubit.ltd/releases</url>
    </repository>
    <snapshotRepository>
      <id>qubit-snapshots</id>
      <url>https://maven.qubit.ltd/snapshots</url>
    </snapshotRepository>
  </distributionManagement>

  <repositories>
    <repository>
      <id>qubit-releases</id>
      <name>Qubit Maven Release Repository</name>
      <url>https://maven.qubit.ltd/releases</url>
      <layout>default</layout>
      <releases>
        <enabled>true</enabled>
        <updatePolicy>always</updatePolicy>
      </releases>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </repository>
    <repository>
      <id>qubit-snapshots</id>
      <name>Qubit Snapshot Repository</name>
      <url>https://maven.qubit.ltd/snapshots</url>
      <layout>default</layout>
      <releases>
        <enabled>false</enabled>
      </releases>
      <snapshots>
        <enabled>true</enabled>
        <updatePolicy>always</updatePolicy>
      </snapshots>
    </repository>
    <repository>
      <id>aliyun</id>
      <name>AliYun Maven Repository</name>
      <url>https://maven.aliyun.com/nexus/content/groups/public/</url>
      <releases>
        <enabled>true</enabled>
      </releases>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </repository>
  </repositories>

  <profiles>
    <profile>
      <id>dev</id>
      <properties>
        <build.suffix>-SNAPSHOT</build.suffix>
        <environment>dev</environment>
        <maven.compiler.options>-g</maven.compiler.options>
      </properties>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
    </profile>
    <profile>
      <id>stage</id>
      <properties>
        <build.suffix>-SNAPSHOT</build.suffix>
        <environment>stage</environment>
        <maven.compiler.options>-g</maven.compiler.options>
      </properties>
    </profile>
    <profile>
      <id>test</id>
      <properties>
        <build.suffix>-SNAPSHOT</build.suffix>
        <environment>test</environment>
        <maven.compiler.options>-g</maven.compiler.options>
      </properties>
    </profile>
    <profile>
      <id>prod</id>
      <properties>
        <build.suffix></build.suffix>    <!-- no -SNAPSHOT suffix for release build -->
        <environment>prod</environment>
        <maven.compiler.options>-g:none</maven.compiler.options>
      </properties>
    </profile>
    <profile>
      <id>release</id>
      <properties>
        <build.suffix></build.suffix>    <!-- no -SNAPSHOT suffix for release build -->
        <environment>prod</environment>
        <maven.compiler.options>-g:none</maven.compiler.options>
      </properties>
    </profile>
    <!-- Disable the javadoc lint for JDK8+ -->
    <profile>
      <id>disable-java8-doclint</id>
      <activation>
        <jdk>[1.8,)</jdk>
      </activation>
      <properties>
        <additionalparam>-Xdoclint:none</additionalparam>
      </properties>
    </profile>
    <!-- JDK9+: generate metadata for reflection of method parameters -->
    <profile>
      <id>jdk9+</id>
      <activation>
        <jdk>[9,)</jdk>
      </activation>
      <properties>
        <maven.compiler.release>${jdk.version}</maven.compiler.release>
        <!-- generate metadata for reflection of method parameters -->
        <maven.compiler.args>-parameters</maven.compiler.args>
      </properties>
    </profile>
    <!-- JDK 9-16.x could add the illegal-access JVM option -->
    <profile>
      <id>jdk9-16</id>
      <activation>
        <jdk>[9,17)</jdk>
      </activation>
      <properties>
        <jvm.options>--illegal-access=permit --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED</jvm.options>
        <test.jvm.options>--illegal-access=permit --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED</test.jvm.options>
      </properties>
    </profile>
    <!-- deploy to njzhyl repository -->
    <profile>
      <id>deploy-to-njzhyl</id>
      <activation>
        <property>
          <name>njzhyl</name>
          <value>true</value>
        </property>
      </activation>
      <distributionManagement>
        <repository>
          <id>njzhyl-releases</id>
          <url>https://nexus.njzhyl.cn/repository/maven-releases/</url>
        </repository>
        <snapshotRepository>
          <id>njzhyl-snapshots</id>
          <url>https://nexus.njzhyl.cn/repository/maven-snapshots/</url>
        </snapshotRepository>
      </distributionManagement>
    </profile>
  </profiles>

  <properties>
    <!-- General configuration constants -->
    <jdk.version>17</jdk.version>
    <jdk.javadoc.link>https://docs.oracle.com/en/java/javase/${jdk.version}/docs/api/</jdk.javadoc.link>
    <maven.compiler.source>${jdk.version}</maven.compiler.source>
    <maven.compiler.target>${jdk.version}</maven.compiler.target>
    <maven.compiler.release>${jdk.version}</maven.compiler.release>
    <project.encoding>UTF-8</project.encoding>
    <project.build.sourceEncoding>${project.encoding}</project.build.sourceEncoding>
    <project.reporting.outputEncoding>${project.encoding}</project.reporting.outputEncoding>
    <project.home.url>https://github.com/Haixing-Hu</project.home.url>
    <project.doc.directory>${project.basedir}/doc</project.doc.directory>
    <!-- default environment -->
    <environment>dev</environment>
    <!-- default build suffix -->
    <build.suffix>-SNAPSHOT</build.suffix>
    <!-- default JVM options for testing is empty string -->
    <test.jvm.options></test.jvm.options>
    <!-- control surefire and failsafe plugins  -->
    <skipTests>false</skipTests>      <!-- Skip all tests, including unit tests and integration tests -->
    <skipITs>${skipTests}</skipITs>   <!-- Skip only integration tests -->
    <skipUTs>${skipTests}</skipUTs>   <!-- Skip only unit tests -->
  </properties>

  <modules>
    <module>bom-ai</module>                         <!-- inherit from pom-meta -->
    <module>bom-annotation</module>                 <!-- inherit from pom-meta -->
    <module>bom-aop</module>                        <!-- inherit from pom-meta -->
    <module>bom-apache-commons</module>             <!-- inherit from pom-meta -->
    <module>bom-byte-code</module>                  <!-- inherit from pom-meta -->
    <module>bom-cache</module>                      <!-- inherit from pom-meta -->
    <module>bom-container-provided</module>         <!-- inherit from pom-meta -->
    <module>bom-crawler</module>                    <!-- inherit from pom-meta -->
    <module>bom-database-connection-pool</module>   <!-- inherit from pom-meta -->
    <module>bom-database-driver</module>            <!-- inherit from pom-meta -->
    <module>bom-html</module>                       <!-- inherit from pom-meta -->
    <module>bom-http</module>                       <!-- inherit from pom-meta -->
    <module>bom-image</module>                      <!-- inherit from pom-meta -->
    <module>bom-jaxb</module>                       <!-- inherit from pom-meta -->
    <module>bom-json</module>                       <!-- inherit from pom-meta -->
    <module>bom-lang</module>                       <!-- inherit from pom-meta -->
    <module>bom-logging</module>                    <!-- inherit from pom-meta -->
    <module>bom-lucene</module>                     <!-- inherit from pom-meta -->
    <module>bom-misc</module>                       <!-- inherit from pom-meta -->
    <module>bom-money</module>                      <!-- inherit from pom-meta -->
    <module>bom-multimedia</module>                 <!-- inherit from pom-meta -->
    <module>bom-network</module>                    <!-- inherit from pom-meta -->
    <module>bom-office</module>                     <!-- inherit from pom-meta -->
    <module>bom-orm</module>                        <!-- inherit from pom-meta -->
    <module>bom-push</module>                       <!-- inherit from pom-meta -->
    <module>bom-security</module>                   <!-- inherit from pom-meta -->
    <module>bom-spring</module>                     <!-- inherit from pom-meta -->
    <module>bom-testing</module>                    <!-- inherit from pom-meta -->
    <module>bom-third-part</module>                 <!-- inherit from pom-meta -->
    <module>bom-tool</module>                       <!-- inherit from bom-database-driver -->
    <module>bom-validation</module>                 <!-- inherit from pom-meta -->
    <module>bom-rule-engine</module>                <!-- inherit from pom-meta -->
    <module>pom-dependency</module>                 <!-- inherit from bom-tool -->
    <module>pom-internal</module>                   <!-- inherit from pom-dependency -->
    <module>pom-maven-plugin</module>               <!-- inherit from pom-internal -->
    <module>pom-reporting</module>                  <!-- inherit from pom-maven-plugin -->
    <module>pom-profile</module>                    <!-- inherit from pom-reporting -->
    <module>pom-root</module>                       <!-- inherit from pom-profile -->
    <module>pom-android-root</module>               <!-- inherit from pom-root -->
  </modules>
</project>